2008-03-22  Brian Warner  <warner@lothar.com>

	* buildbot/process/builder.py (Builder): use self.old_building to
	track Builds from a previous version of this Builder and are still
	running. This makes it possible for IBuilderControl to get at
	them, allowing the "Stop Build" button to work after a
	Builder-replacing reconfig. Closes #22.
	(Builder.consumeTheSoulOfYourPredecessor): grab weakrefs from the
	old Builder's self.building attribute, instead of strongrefs,
	since there's no good place to explicitly forget about them.
	(Builder.getBuild): factor this out of BuilderControl

	* buildbot/process/buildstep.py (LogLineObserver.setMaxLineLength):
	new method to override the default 16KiB line length. Lines that
	are longer than this will cause the rest of the log file to be
	ignored. Thanks to Greg Ward for the patch. Closes #201.
	* buildbot/test/test_buildstep.py: new tests for log observers
	* docs/buildbot.texinfo (Adding LogObservers): document it

	* buildbot/slave/commands.py (ShellCommand): record more
	information in the 'header' section: how much we write into stdin,
	do we close stdin, are we using a PTY. There are lingering
	problems with PTYs and with closing stdin (see #198 and #158).
	This doesn't fix those problems, but it should provide more
	information to developers.

	* buildbot/status/client.py: hush pyflakes, log.msg vs log
	* buildbot/status/mail.py: same

	* buildbot/locks.py (debuglog): hush pyflakes

	* buildbot/steps/source.py (SVN.__init__): fix pyflakes: it
	doesn't like a variable named 'warnings' that shadows the import

	* buildbot/test/test_web.py: fix some pyflakes warnings, caused by
	having a variable name shadow a top-level import

	* buildbot/test/test_run.py (Disconnect.testBuild2): fix old
	cut-and-paste typo that was causing us to run the wrong callback

	* Makefile (pyflakes): sort+uniqify, since newer pyflakes isn't
	smart enough to do this on its own
	* buildbot/test/runutils.py (myGetProcessOutputAndValue): move this